data/yaml/k8s-scr-mgr.yaml
#############################################################################################################################################
# This YAML loads container k8s-scr-mgr into Kubernetes
#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#
# - ensure the 'host' value is pointing to the correct server.
#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#
# - run file on server where this yaml is stored: kubectl apply -f k8s-scr-mgr.yaml
#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#
# Call container: https://<Server>/k8s-scr-mgr/<endpoint> 
#############################################################################################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-scr-mgr
  namespace: default
  labels:
    app-owner: sas
    app.kubernetes.io/name: k8s-scr-mgr
spec:
  replicas: 1
  selector:
    matchLabels:
      app-owner: sas
      app.kubernetes.io/name: k8s-scr-mgr
  template:
    metadata:
      labels:
        app-owner: sas
        app.kubernetes.io/name: k8s-scr-mgr
    spec:
      containers:
      - name: k8s-scr-mgr
        image: ghcr.io/sukckn/k8s-scr-mgr:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 5000
          protocol: TCP
        volumeMounts:
          - name: kubectl
            mountPath: /tmp/config
            subPath: config
          - name: yaml-template
            mountPath: /k8s-scr-mgr/template/scr-template.yaml
            subPath: template
          - name: k8s-scr-mgr-config
            mountPath: /k8s-scr-mgr/app/config.py
            subPath: config
        securityContext:
          capabilities:
            drop:
            - ALL
          privileged: false
          runAsUser: 1001
          runAsNonRoot: true
          allowPrivilegeEscalation: false
      restartPolicy: Always
      securityContext: {}
      volumes:
        - name: kubectl
          configMap:
            name: kubectl-config
        - name: yaml-template
          configMap:
            name: scr-yaml-template
        - name: k8s-scr-mgr-config
          configMap:
            name: k8s-scr-mgr-config
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-scr-mgr
  namespace: default
  labels:
    app-owner: sas
    app.kubernetes.io/name: k8s-scr-mgr
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 5000
  selector:
    app-owner: sas
    app.kubernetes.io/name: k8s-scr-mgr
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-scr-mgr
  namespace: default
  labels:
    app-owner: sas
    app.kubernetes.io/name: k8s-scr-mgr
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - url.myserver.com # set url for the server where you deploy k8s-scr-mgr
    secretName: net-sas-com-app-certs
  rules:
  - host: url.myserver.com # set url for the server where you deploy k8s-scr-mgr
    http:
      paths:
      - path: /k8s-scr-mgr
        pathType: Prefix
        backend:
          service:
            name: k8s-scr-mgr
            port:
              number: 80
